--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /obj
 /.vs/DevDelBo/FileContentIndex
 /workload-install.ps1
+.vs/DevDelBo/DesignTimeBuild/.dtbcache.v2
+.vs/DevDelBo/v17/.suo
+.vs/ProjectEvaluation/devdelbo.metadata.v7.bin
+.vs/ProjectEvaluation/devdelbo.projects.v7.bin
+.vs/DevDelBo/v17/.futdcache.v2
